[package]
name = "backup_helper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "*"
env_logger = "*"
#mysql = "*"
clap = { version = "4.0", features = ["derive"] }
config = "0.13.1"
serde_derive = "1.0.144"
serde = { version = "1.0.144", features = ["derive"]}
